# sasayaki

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: main.rs
src/css/: style.css
src/resources/: style-dark.css  style.css  styles.gresource.xml
