[package]
name = "sasayaki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.2.1", package = "libadwaita" }
anyhow = "1.0.68"
byte-slice-cast = "1.2.2"
clap = { version = "4.0.32", features = ["derive"] }
glib = { version = "0.16.7", features = ["v2_74"] }
gstreamer = { version = "0.19.3", features = ["v1_20"] }
gstreamer-app = { version = "0.19.2", features = ["v1_20"] }
gstreamer-audio = { version = "0.19.4", features = ["v1_20"] }
gtk4 = { version = "0.5.5", features = ["v4_8"] }
log = "0.4.17"
stderrlog = "0.5.4"
whisper-rs = "0.3.0"

[build-dependencies]
glib-build-tools = "0.16.3"
